Style changes and fix collapsable nav

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,12 @@
 .main-raised {
-    margin-top: -22px;
+    margin-top: 75px;
     margin-left: 20px;
     margin-right: 20px;
+}
+
+
+.main-content{
+    height: 100%;
+    min-height: 100%;
+    box-sizing:border-box;
 }
