--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,9 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 
 .section-header {
-     max-width: 90%;
+    max-width: 90%;
 }
-.main-content {
-    z-index: -1 !important;
-}
-
